# rust-subprocess-communicate

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  unix.rs
