[package]
name = "subprocess-communicate"
version = "0.2.0"
authors = ["Daniel Reiter Horn <danielrh@dropbox.com>"]
description = "Provides a communicate primitive similar to python's subprocess.Popen.communicate that allows input to be presented to the process and results to be captured from both stdout and stderr up to an optional bound."
license = "BSD-3-Clause"
documentation = "https://github.com/dropbox/rust-subprocess-communicate/tree/master/README.md"
homepage = "https://github.com/dropbox/rust-subprocess-communicate"
repository = "https://github.com/dropbox/rust-subprocess-communicate"
keywords = ["subprocess", "child", "stdio", "stdout", "process"]
readme = "README.md"

[dependencies]
log = "^0.3.1"
mio = "^0.5"
bytes = "^0.3"
slab = "^0.1"
nix    = "^0.5"

#[[bin]]
#name = "tee"
#path = "src/main.rs"
